--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "browser": "index.min.js",
   "bugs": "https://github.com/taufik-nurrohman/text-editor.rect/issues",
   "dependencies": {
-    "@taufik-nurrohman/text-editor": "^3.3.0"
+    "@taufik-nurrohman/text-editor": "^3.3.1"
   },
-  "description": "Rect extension for text editor.",
+  "description": "Provides a feature to get cursor position and selection dimension in pixels.",
   "devDependencies": {
     "@taufik-nurrohman/document": "^0.1.5",
     "@taufik-nurrohman/factory": "^0.1.11",
@@ -50,5 +50,5 @@
     "pack": "pack --clean=false --from=.github/source --js-format=umd --js-name=TE.Rect --js-top='%(js.license)' --mjs=true --to=."
   },
   "type": "module",
-  "version": "2.0.0"
+  "version": "2.1.0"
 }
