--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "browser": "index.min.js",
   "bugs": "https://github.com/taufik-nurrohman/text-editor.rect/issues",
   "dependencies": {
-    "@taufik-nurrohman/document": "^0.2.0",
-    "@taufik-nurrohman/from": "^0.0.9",
-    "@taufik-nurrohman/is": "^0.1.2",
-    "@taufik-nurrohman/rect": "^0.0.10",
-    "@taufik-nurrohman/text-editor": "^3.3.10",
-    "@taufik-nurrohman/to": "^0.0.18"
+    "@taufik-nurrohman/document": "*",
+    "@taufik-nurrohman/from": "*",
+    "@taufik-nurrohman/is": "*",
+    "@taufik-nurrohman/rect": "*",
+    "@taufik-nurrohman/text-editor": "*",
+    "@taufik-nurrohman/to": "*"
   },
   "description": "Provides a feature to get cursor position and selection dimension in pixels.",
   "devDependencies": {
-    "@taufik-nurrohman/factory": "^1.0.2"
+    "@taufik-nurrohman/factory": "*"
   },
   "exports": {
     "import": "./index.mjs",
@@ -47,8 +47,7 @@
     "url": "git+https://github.com/taufik-nurrohman/text-editor.rect.git"
   },
   "scripts": {
-    "pack": "pack --clean=false --from=.github/source --js-format=umd --js-name=TE.Rect --js-top='%(js.license)' --mjs=true --to=."
+    "pack": "pack --clean=false --from=.github/factory --js-format=umd --js-name=TE.Rect --js-top='%(js.license)' --mjs=true --to=."
   },
-  "type": "module",
-  "version": "2.1.11"
+  "version": "2.1.12"
 }
